@@ -26,6 +26,8 @@ class LayerManager : public DocumentSubset,
 public:
     LayerManager(SPDesktop *desktop);
 
+    void renameLayer( SPObject* obj, gchar const *label );
+
     sigc::connection connectCurrentLayerChanged(const sigc::slot<void, SPObject *> & slot) {
 	return _layer_changed_signal.connect(slot);
     }
